--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,31 +8,65 @@
 #
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/README.html#stages
 
+# Official language image. Look for the different tagged releases at:
+# https://hub.docker.com/r/library/python/tags/
+image: python:latest
+
+# Change pip's cache directory to be inside the project directory since we can
+# only cache local items.
+variables:
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+
+# Pip's cache doesn't store the python packages
+# https://pip.pypa.io/en/stable/reference/pip_install/#caching
+#
+# If you want to also cache the installed packages, you have to install
+# them in a virtualenv and cache it as well.
+cache:
+  paths:
+    - .cache/pip
+    - venv/
+
+before_script:
+  - python -V  # Print out python version for debugging
+  - pip install virtualenv
+  - virtualenv venv
+  - source venv/bin/activate
+
 stages:          # List of stages for jobs, and their order of execution
+  - setup
   - build
   - test
 #   - deploy
 
+setup-job:
+  stage: setup
+  script:
+    - pip install pytest, pylint, tox
+
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - echo "Compiling the code..."
+    - echo "installing from sdist"
     - python setup.py sdist
-    - echo "Compile complete."
 
 
-unit-test-job:   # This job runs in the test stage.
+estimator-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Testing estimators..."
-    - conda install pytest -y
     - pytest test/check_esimtators.py
 
-lint-test-job:   # This job also runs in the test stage.
+smoke-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
   script:
     - echo "Smoke test whole package..."
     - python test/smoke_test.py
+
+lint-test-job:
+  stage: test
+  script:
+    - pylint fuzzy_water_clustering
 
 # deploy-job:      # This job runs in the deploy stage.
 #   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
