--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ stages:          # List of stages for jobs, and their order of execution
 setup-job:
   stage: setup
   script:
-    - pip install pytest, pylint, tox
+    - pip install pytest pylint
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
