--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ stages:          # List of stages for jobs, and their order of execution
 setup-job:
   stage: setup
   script:
-    - pip install pytest pylint
+    - pip install pytest pylint twine
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
@@ -77,5 +77,6 @@ lint-test-job:
 # deploy-job:      # This job runs in the deploy stage.
 #   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
 #   script:
-#     - echo "Deploying application..."
-#     - echo "Application successfully deployed."
+    - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --repository-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi dist/*
+
+
