--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,6 @@ build-job:       # This job runs in the build stage, which runs first.
   script:
     - echo "building sdist"
     - python setup.py sdist
-    - pip install -r requirements.txt
     - ls 
     - echo "installing from sdist"
     - python -m pip install ./dist/*
@@ -77,7 +76,8 @@ lint-test-job:
 publish-job:      # This job runs in the deploy stage.
   stage: publish  # It only runs when *both* jobs in the test stage complete successfully.
   rules: # only publish new package on merge on master (default) branch
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+      when: never
 
   script:
     - pip install twine
