--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ classifiers =
 
 [options]
 package_dir =
-    = fuzzy_water_clustering
+    = .
 packages = find:
 python_requires = >=3.6
 
@@ -28,4 +28,4 @@ install_requires =
     scikit-fuzzy
 
 [options.packages.find]
-where = fuzzy_water_clustering
+where = .
