--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,8 @@ build-job:       # This job runs in the build stage, which runs first.
     - ls 
     - echo "installing from sdist"
     - python -m pip install ./dist/* # FIXME @anla: does this work?
+    - pip freeze
+    - pip install -r requirements.txt
 
 
 estimator-test-job:   # This job runs in the test stage.
@@ -64,8 +66,6 @@ estimator-test-job:   # This job runs in the test stage.
 smoke-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
   script:
-    - python setup.py sdist
-    - python -m pip install ./dist/*
     - echo "Smoke test whole package..."
     - python test/smoke_test.py
 
